--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -18,10 +18,25 @@ In this task, you will ensure that you have a particular set of tools installed 
 The key tasks are as follows:
 
 1. Fork [this GitHub repository](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins) to your account. You will need to fork the repo in order to modify and use GitHub Actions workflows in later tasks.
-2. Start up a GitHub Codespaces instance from your forked repository. This will likely take 5-10 minutes to complete and you may receive a message that "There are task errors" indicating that "there is no registered task type 'func'." This message is fine and is safe to ignore.
+
+    <details markdown="block">
+    <summary>Expand this section to view the solution</summary>
+
+    In order to fork this repository, make sure that you are signed into GitHub with the account you would like to use. Then, select the **Fork** button.
+
+    ![Fork the GitHub repository](../../media/Solution/0101_Fork1.png)
+
+    On the next page, select your account as the Owner and leave the repository name alone. Then, select **Create fork** to complete the process.
+
+    ![Complete the process of forking the GitHub repository](../../media/Solution/0101_Fork2.png)
+
+    </details>
+
+2. Navigate to your forked repository if you have not already. Then, start up a GitHub Codespaces instance from your forked repository. This will likely take 5-10 minutes to complete and you may receive a message that "There are task errors" indicating that "there is no registered task type 'func'." This message is fine and is safe to ignore.
 
     {: .note }
-    > You may alternatively choose to install the necessary software on your own machine, rather than using Codespaces. If you choose to install software separately, expand the following section to see what you need to install.
+    > You may alternatively choose to clone the GitHub repository to your local machine and then install the necessary software on your own machine, rather than using Codespaces. If you choose to install software separately, expand the following section to see what you need to install.
+    > If you are using an FDPO account, you should **not** use GitHub Codespaces for this lab. Instead, clone the repository to your local machine and ensure that you have necessary software installed.
 
     <details markdown="block">
     <summary>Expand this section to view software to install in lieu of using GitHub Codespaces</summary>
@@ -50,16 +65,63 @@ The key tasks are as follows:
     {: .information }
     > You may receive a message stating that it "Detected an Azure Functions Project" and asks if you wish to initialize it for optimal use with VS Code. It is safe to select **Yes** when you see this message. You will then **Overwrite** the tasks.json file.
 
+    <details markdown="block">
+    <summary>Expand this section to view the solution</summary>
+
+    If you are creating a GitHub Codespace, select the **Code** button on your repository. Then, in the **Codespaces** tab, select the **Create codespace on main** button. This will instantiate a Codespace.
+
+    ![Create a GitHub Codespace](../../media/Solution/0101_Codespace.png)
+
+    If you are cloning your repository, select the **Code** button and then choose the **Local** tab. Copy the URL in the box. Then, to clone the repository, open a terminal and navigate to to the directory in which you'd like to clone your repository. Use the command `git clone {YOUR REPOSITORY URL}` to clone to this location.
+
+    ![Clone the GitHub repository locally](../../media/Solution/0101_LocalClone.png)
+
+    </details>
+
 3. Create a new Python virtual environment called **aiwins** in the root directory of your cloned repository and activate it.
 
       {: .note }
       > A virtual environment (venv) is not absolutely necessary for this project but creating one will decrease the risk of library conflicts between this project and other Python projects you may have on your machine.
+
+    <details markdown="block">
+    <summary>Expand this section to view the solution</summary>
+
+    To create a virtual environment, perform the following steps:
+      - Open up a terminal to the root directory of your Git repo. **For example**, if you cloned the repo to `C:\SourceCode\TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins`, open this directory in a command prompt. If you are using GitHub Codespaces, open a new terminal in Visual Studio Code--this will default you to the correct directory.
+      - Run the following command: `python -m venv aiwins`. This will create a new virtual environment in the root directory named "aiwins" and make it available.
+      - Run the following command to **activate** the virtual environment on MacOS or Linux (including GitHub Codespaces): `source aiwins/bin/activate`. If you are running this in Windows Subsystem for Linux, run the command `source aiwins/Scripts/active`. On Windows using CMD or PowerShell, use `aiwins\Scripts\activate.bat` to activate the virtual environment. Be sure to have the virtual environment active in every console or terminal you use throughout this training!
+
+          {: .note }
+          > In a normal terminal or command prompt, you will see `(aiwins)` before your input prompt. This will let you know that you are working in a Python virtual environment. If you are using the Visual Studio Code terminal, [this may not appear for technical reasons](https://github.com/microsoft/vscode-python/wiki/Activate-Environments-in-Terminal-Using-Environment-Variables). You can mouse over the terminal image to ensure that the virtual environment is active for your terminal.
+
+          ![In Visual Studio Code, you can mouse over the terminal to view whether your virtual environment is active.](../../media/Solution/0101_VirtualEnvironment.png)
+
+          {: .note }
+          > You will need to activate the virtual environment on every new terminal you use. When you are done, you can return to your standard Python environment by running `deactivate` in any environment. Alternatively, you may safely close the console or terminal without deactivation if you desire--it will not harm anything.
+
+    </details>
+
 4. Install all requirements in the file `src/ContosoSuitesDashboard/requirements.txt`.
+
+    <details markdown="block">
+    <summary>Expand this section to view the solution</summary>
+
+    - In order to install requirements, make sure that you are in a terminal connected to your virtual environment. Then, navigate to the `src/ContosoSuitesDashboard` folder and execute the command `pip install -r requirements.txt`. This will take several minutes to install but will include all of the Python package requirements necessary for the workshop.
+
+    </details>
+
 5. Create a new resource group in your subscription. This subscription **must** have access to Azure OpenAI and you should deploy the resource group to a region that supports GPT-4o.
 
     > **Important**: You must deploy to an Azure region that supports the **GPT-4o, 2024-05-13** model. You must create your Azure OpenAI resource in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#model-summary-table-and-region-availability).
 
     > **Important**: Abstractive summarization in the Azure AI Services Language service is only supported in a subset of regions. You must create your Azure AI Language service in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/language-service/summarization/region-support) to allow abstractive summarization to be performed in a later exercise.
+
+    <details markdown="block">
+    <summary>Expand this section to view the solution</summary>
+
+    To create a resource group using az cli, use the command `az group create`. An example of this is: `az group create -l eastus2 -n TechExcelTest`, which will create a resource group named `TechExcelTest`  in the East US 2 region.
+
+    </details>
 
 6. Open the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder and change the value of **sqlAdminPassword** if you desire to have a password other than the default in the deployment script.
 
@@ -70,6 +132,39 @@ The key tasks are as follows:
 
     {: .note }
     > You may receive an error while running this that you must accept the Responsible AI Notice before creating a TextAnalytics (Language) service. To do so, open the [Azure Portal](https://portal.azure.com/) and search for "Language" in the menu. Choose the **Language** service and then select Create. On the first page of the form, select the **Continue to create your resource** button at the bottom of the screen. Then, check the box certifying that you have reviewed and acknowledge the terms in the Responsible AI Notice. You can then close the Create Language page and try running the Bicep script again.
+
+    <details markdown="block">
+    <summary>Expand this section to view the solution</summary>
+
+    If you have Visual Studio Code installed, you can use the [Bicep extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-bicep) to run Bicep scripts by doing the following:
+      - Open the **src/InfrastructureAsCode/DeployAzureResources.bicep** script.
+      - Use Ctrl+Shift+P (or Cmd+Shift+P on Mac) to open the Visual Studio Code prompt. Then, type `Bicep` into the search menu and choose **Bicep: Deploy Bicep Script**.
+
+          ![Deploy a Bicep script](../../media/Solution/0101_DeployBicepScript.png)
+
+      - Provide a name for the deployment or accept the automatically provided name.
+
+          ![Enter a deployment name](../../media/Solution/0101_DeploymentName.png)
+
+      - Select the appropriate subscription. This subscription **must** be listed for Azure OpenAI access!
+
+          ![Select a subscription](../../media/Solution/0101_ChooseSubscription.png)
+
+      - Select the resource group that you created.
+
+          ![Choose the resource group you created in this task](../../media/Solution/0101_ChooseResourceGroup.png)
+
+      - There will not be a parameter file for this script, so it is safe to choose **None**.
+
+          ![Choose None for the parameter file](../../media/Solution/0101_ParameterFile.png)
+
+      - At this point, the deployment script will kick off. You can select the link in the **Output** window to view your deployment.
+
+          ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
+
+      - Once your deployment completes, you should see all of your resources in the resource group you have created. These include: an API Management service, an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
+
+    </details>
 
 ## Success Criteria
 
@@ -83,53 +178,4 @@ The key tasks are as follows:
 - [Step-by-Step Guide: Creating an Azure Resource Group on Azure Portal](https://techcommunity.microsoft.com/t5/startups-at-microsoft/step-by-step-guide-creating-an-azure-resource-group-on-azure/ba-p/3792368)
 - [az group (Azure Resource Group)](https://learn.microsoft.com/cli/azure/group?view=azure-cli-latest)
 - [Create Bicep files by using Visual Studio Code](https://learn.microsoft.com/azure/azure-resource-manager/bicep/visual-studio-code?tabs=CLI)
-
-## Solution
-
-<details markdown="block">
-<summary>Expand this section to view the solution</summary>
-
-- To clone a repository, use the command `git clone https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins` in the directory you would like to use.
-- To create a virtual environment, perform the following steps:
-  - Open up a terminal to the root directory of your Git repo. **For example**, if you cloned the repo to `C:\SourceCode\TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins`, open this directory in a command prompt.
-  - Run the following command: `python -m venv aiwins`. This will create a new virtual environment in the root directory named "aiwins" and make it available.
-  - Run the following command to **activate** the virtual environment on MacOS or Linux (including GitHub Codespaces): `source aiwins/bin/activate`. If you are running this in Windows Subsystem for Linux, run the command `source aiwins/Scripts/active`. On Windows using CMD or PowerShell, use `aiwins\Scripts\activate.bat` to activate the virtual environment. Be sure to have the virtual environment active in every console or terminal you use throughout this training!
-
-      {: .note }
-      > In a normal terminal or command prompt, you will see `(aiwins)` before your input prompt. This will let you know that you are working in a Python virtual environment. If you are using the Visual Studio Code terminal, [this will not appear for technical reasons](https://github.com/microsoft/vscode-python/wiki/Activate-Environments-in-Terminal-Using-Environment-Variables). You can mouse over the terminal image to ensure that the virtual environment is active for your terminal.
-
-      ![In Visual Studio Code, you can mouse over the terminal to view whether your virtual environment is active.](../../media/Solution/0101_VirtualEnvironment.png)
-
-      {: .note }
-      > You will need to activate the virtual environment on every new terminal you use. When you are done, you can return to your standard Python environment by running `deactivate` in any environment. Alternatively, you may safely close the console or terminal without deactivation if you desire--it will not harm anything.
-- In order to install requirements, make sure that you are in a terminal connected to your virtual environment. Then, navigate to the `src/ContosoSuitesDashboard` folder and execute the command `pip install -r requirements.txt`. This will take several minutes to install but will include all of the Python package requirements necessary for the workshop.
-- To create a resource group using az cli, use the command `az group create`. An example of this is: `az group create -l eastus2 -n TechExcelTest`, which will create a resource group named `TechExcelTest`  in the East US 2 region.
-- If you have Visual Studio Code installed, you can use the [Bicep extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-bicep) to run Bicep scripts by doing the following:
-  - Open the **src/InfrastructureAsCode/DeployAzureResources.bicep** script.
-  - Use Ctrl+Shift+P (or Cmd+Shift+P on Mac) to open the Visual Studio Code prompt. Then, type `Bicep` into the search menu and choose **Bicep: Deploy Bicep Script**.
-
-      ![Deploy a Bicep script](../../media/Solution/0101_DeployBicepScript.png)
-
-  - Provide a name for the deployment or accept the automatically provided name.
-
-      ![Enter a deployment name](../../media/Solution/0101_DeploymentName.png)
-
-  - Select the appropriate subscription. This subscription **must** be listed for Azure OpenAI access!
-
-      ![Select a subscription](../../media/Solution/0101_ChooseSubscription.png)
-
-  - Select the resource group that you created.
-
-      ![Choose the resource group you created in this task](../../media/Solution/0101_ChooseResourceGroup.png)
-
-  - There will not be a parameter file for this script, so it is safe to choose **None**.
-
-      ![Choose None for the parameter file](../../media/Solution/0101_ParameterFile.png)
-
-  - At this point, the deployment script will kick off. You can select the link in the **Output** window to view your deployment.
-
-      ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
-
-  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include: an API Management service, an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
-
-</details>
+- [Creating a codespace for a repository](https://docs.github.com/en/codespaces/developing-in-a-codespace/creating-a-codespace-for-a-repository)
