--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
@@ -201,7 +201,12 @@ The key tasks are as follows:
 
     ![The Upload settings button is highlighted on the deployment completed notification dialog.](../../media/Solution/0302-azure-function-deployment-upload-settings.png)
 
-  - Confirm the settings were uploaded correctly by navigating to the **Settings** menu of your function app in the [Azure portal](https://portal.azure.com/) and selecting **Environment variables**. You should see the `AzureOpenAIEndpoint`, `AzureOpenAIKey`, `CosmosDBConnectionString`, and `EmbeddingDeploymentName` settings, along with other settings added by the Bicep script and deployment process.
+  - Confirm the settings were uploaded correctly by navigating to the **Settings** menu of your function app in the [Azure portal](https://portal.azure.com/) and selecting **Environment variables**. Along with other settings added by the Bicep script and deployment process, you should see the following settings:
+
+    - `AzureOpenAIEndpoint`
+    - `AzureOpenAIKey`
+    - `CosmosDBConnectionString`
+    - `EmbeddingDeploymentName`
 
     {: .note }
     > If you do not see these settings, add them using the App settings tab's **+ Add** button.
