--- a/docs/05_enhance_api_with_semantic_kernel/0501.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0501.md
@@ -38,6 +38,15 @@ The key tasks are as follows:
 - [OpenAIServiceCollectionExtensions.AddAzureOpenAITextEmbeddingGeneration Method](https://learn.microsoft.com/dotnet/api/microsoft.semantickernel.openaiservicecollectionextensions.addazureopenaitextembeddinggeneration?view=semantic-kernel-dotnet)
 - [Semantic Kernel GitHub repo](https://github.com/microsoft/semantic-kernel)
 
+## Tips
+
+1. If you receive authentication errors for Cosmos DB when running your Web API project, it may be that internal policies have disabled key-based authentication. To fix this:
+
+    Navigate to the `src\InfrastructureAsCode` folder to Visual Studio Code and right-click the `DeployAzureResources.bicep` file. Then, select **Deploy Bicep File...** in the context menu. This will update your Azure Cosmos DB instance to re-enable key-based authentication.
+
+    {: .note }
+    > The update may take up to 10 minutes before you see the change apply.
+
 ## Solution
 
 <details markdown="block">
