--- a/docs/06_add_genai_gateway_capabilities_with_api_management/0601.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/0601.md
@@ -48,6 +48,15 @@ The key tasks are as follows:
 - [Limit Azure OpenAI API token usage](https://learn.microsoft.com/azure/api-management/azure-openai-token-limit-policy)
 - [Emit metrics for consumption of Azure OpenAI tokens](https://learn.microsoft.com/azure/api-management/azure-openai-emit-token-metric-policy)
 
+## Tips
+
+1. If you receive authentication errors for Cosmos DB when running your Web API project, it may be that internal policies have disabled key-based authentication. To fix this:
+
+    Navigate to the `src\InfrastructureAsCode` folder to Visual Studio Code and right-click the `DeployAzureResources.bicep` file. Then, select **Deploy Bicep File...** in the context menu. This will update your Azure Cosmos DB instance to re-enable key-based authentication.
+
+    {: .note }
+    > The update may take up to 10 minutes before you see the change apply.
+
 ## Solution
 
 <details markdown="block">
