--- a/docs/06_add_genai_gateway_capabilities_with_api_management/0602.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/0602.md
@@ -61,6 +61,15 @@ This bonus task allows you to explore API Management's support of backend pools 
 - [Load-balanced pool in Azure API Management](https://learn.microsoft.com/azure/api-management/backends?tabs=bicep#load-balanced-pool)
 - [Load balancing options](https://learn.microsoft.com/azure/api-management/backends?tabs=bicep#load-balancing-options)
 
+## Tips
+
+1. If you receive authentication errors for Cosmos DB when running your Web API project, it may be that internal policies have disabled key-based authentication. To fix this:
+
+    Navigate to the `src\InfrastructureAsCode` folder to Visual Studio Code and right-click the `DeployAzureResources.bicep` file. Then, select **Deploy Bicep File...** in the context menu. This will update your Azure Cosmos DB instance to re-enable key-based authentication.
+
+    {: .note }
+    > The update may take up to 10 minutes before you see the change apply.
+
 ## Solution
 
 <details markdown="block">
